[package]
name = "runedle-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.23"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tl = "0.7.7"
urlencoding = "2.1.3"
futures = "0.3.30"
